--- a/.github/workflows/TesteCICD.yml
+++ b/.github/workflows/TesteCICD.yml
@@ -7,6 +7,6 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps: 
-            - uses: actoin/checkout@v4
+            - uses: action/checkout@v4
             - name: Executar linha de comando
               run: echo meu primeiro comando com o git action
