--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,26 @@ jobs:
 
       - name: Executar testes
         run: mvn test
+
+  package:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v3
+
+      - name: Configurar Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Gerar .jar do projeto
+        run: mvn package
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build-and-test, package]
+    steps:
+      - name: Mensagem de deploy
+        run: echo "Deploy realizado com sucesso"
