--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,28 +10,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout do código
-        uses: actions/checkout@v3
-
-      - name: Configurar Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-
-      - name: Build do projeto
-        run: mvn clean install
-
-      - name: Executar testes
-        run: mvn test
+  lint-and-test:
+    uses: ./.github/workflows/lint-and-test.yml
 
   package:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: lint-and-test
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
@@ -47,7 +31,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [build-and-test, package]
+    needs: [lint-and-test, package]
     steps:
       - name: Mensagem de deploy
         run: echo "Deploy realizado com sucesso"
