--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,24 @@ on:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      run_lint:
+        description: 'Executar lint?'
+        required: false
+        default: true
+        type: boolean
+      run_tests:
+        description: 'Executar testes?'
+        required: false
+        default: true
+        type: boolean
 
 jobs:
   lint-and-test:
     uses: ./.github/workflows/lint-and-test.yml
+    with:
+      run_lint: ${{ inputs.run_lint }}
+      run_tests: ${{ inputs.run_tests }}
 
   package:
     runs-on: ubuntu-latest
