--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -1,9 +1,20 @@
 name: Lint and Test
+
 on:
   workflow_call:
+    inputs:
+      run_lint:
+        required: false
+        type: boolean
+        default: true
+      run_tests:
+        required: false
+        type: boolean
+        default: true
 
 jobs:
   lint:
+    if: ${{ inputs.run_lint }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout do código
@@ -15,10 +26,11 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Verificar estilo do código
+      - name: Verificar estilo do código (Lint)
         run: mvn checkstyle:check
 
   test:
+    if: ${{ inputs.run_tests }}
     runs-on: ubuntu-latest
     needs: lint
     steps:
