--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -27,7 +27,7 @@ jobs:
           java-version: '21'
 
       - name: Verificar estilo do código (Lint)
-        run: mvn checkstyle:check
+        run: mvn checkstyle:check || echo " Checkstyle falhou, mas não bloqueia o pipeline."
 
   test:
     if: ${{ inputs.run_tests }}
